--- a/src/app/components/prod-destacado/prod-destacado.component.html
+++ b/src/app/components/prod-destacado/prod-destacado.component.html
@@ -1,25 +1,27 @@
-
 <!-- Start Product Section -->
 <div class="product-section">
     <div class="container">
         <div class="row">
             <!-- Start Column 1 -->
             <div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-                <h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-                <p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
-                    velit imperdiet dolor tempor tristique. </p>
-                <p><a href="shop.html" class="btn">Explore</a></p>
+                <h2 class="mb-4 section-title">Productos destacados de la semana</h2>
+                <p class="mb-4">Descubre nuestros uniformes de alta calidad: desde elegantes trajes corporativos hasta
+                    cómodos uniformes escolares. ¡Aprovecha nuestras ofertas especiales y encuentra el estilo perfecto
+                    para tu equipo!.</p>
+                <p><a [routerLink]="'/shop'" class="btn" (click)="posicionInicial()">Explorar</a></p>
             </div>
             <!-- End Column 1 -->
             <!-- Start Column 2 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-                <a class="product-item" href="cart.html">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/camisa1.webp" class="img-fluid product-thumbnail" width="400">
-                    <h3 class="product-title">Nordic Chair</h3>
-                    <strong class="product-price">$50.00</strong>
+                    <h3 class="product-title">Camisa clásica Masculina</h3>
+                    <strong class="product-price">Gs 100.000</strong> Minoristas
+                    <br />
+                    <strong class="product-price">Gs 80.000</strong> Mayoristas
 
                     <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid" >
+                        <img src="assets/images/cross.svg" class="img-fluid">
                     </span>
                 </a>
             </div>
@@ -27,10 +29,12 @@
 
             <!-- Start Column 3 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-                <a class="product-item" href="cart.html">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/CAMISA-BIG.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Kruzo Aero Chair</h3>
-                    <strong class="product-price">$78.00</strong>
+                    <h3 class="product-title">Camisa clásica corte Femenino</h3>
+                    <strong class="product-price">Gs 110.000</strong> Minoristas
+                    <br />
+                    <strong class="product-price">Gs 90.000</strong> Mayoristas
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -41,18 +45,18 @@
 
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-                <a class="product-item" href="cart.html">
-                    <img src="assets/images/suitex/camisa-roja.png" class="img-fluid product-thumbnail" width="150">
-                    <h3 class="product-title">Ergonomic Chair</h3>
-                    <strong class="product-price">$43.00</strong>
-
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
+                    <img src="assets/images/suitex/camisa-roja.png" class="img-fluid product-thumbnail" width="200">
+                    <h3 class="product-title">Camisa moderna Masculina</h3>
+                    <strong class="product-price">Gs 130.000</strong> Minoristas
+                    <br />
+                    <strong class="product-price">Gs 95.000</strong> Mayoristas
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
                     </span>
                 </a>
             </div>
             <!-- End Column 4 -->
-
         </div>
     </div>
 </div>
