--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,8 +1,8 @@
 <!-- Start Hero Section -->
 <div class="hero">
     <div class="container">
-        <app-destacado [title]="'Services'"
-        [text]="'Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.'"
+        <app-destacado [title]="'Servicios'"
+        [text]="'.'"
         [image]="'assets/images/suitex/hombre-unidormes.png'" />
     </div>
 </div>
@@ -15,8 +15,9 @@
                     <div class="icon">
                         <img src="assets/images/truck.svg" alt="Image" class="imf-fluid">
                     </div>
-                    <h3>Fast &amp; Free Shipping</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+                    <h3>Envío Rápido</h3>
+                    <p>Llegamos a todo el país en tiempo récord.</p>
+                    <p>Entrega puntual y seguimiento en línea.</p>
                 </div>
             </div>
 
@@ -25,8 +26,9 @@
                     <div class="icon">
                         <img src="assets/images/bag.svg" alt="Image" class="imf-fluid">
                     </div>
-                    <h3>Easy to Shop</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+                    <h3>Fácil de Comprar</h3>
+                    <p>Múltiples plataformas de compra: sitio web, redes sociales y tiendas físicas.</p>
+                    <p>Toda la información sobre nuestros productos disponible en un clic.</p>
                 </div>
             </div>
 
@@ -35,8 +37,9 @@
                     <div class="icon">
                         <img src="assets/images/support.svg" alt="Image" class="imf-fluid">
                     </div>
-                    <h3>24/7 Support</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+                    <h3>Soporte 24/7</h3>
+                    <p>Estamos disponibles en cualquier momento para atender urgencias.</p>
+                    <p>Contáctanos por teléfono, chat o correo electrónico.</p>
                 </div>
             </div>
 
@@ -45,8 +48,9 @@
                     <div class="icon">
                         <img src="assets/images/return.svg" alt="Image" class="imf-fluid">
                     </div>
-                    <h3>Hassle Free Returns</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+                    <h3>Devoluciones sin Complicaciones</h3>
+                    <p>Mecanismos de negociación para resolver cualquier disgusto.</p>
+                    <p>Proceso sencillo y sin trabas burocráticas.</p>
                 </div>
             </div>
 
@@ -55,8 +59,9 @@
                     <div class="icon">
                         <img src="assets/images/truck.svg" alt="Image" class="imf-fluid">
                     </div>
-                    <h3>Fast &amp; Free Shipping</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+                    <h3>Calidad Garantizada</h3>
+                    <p>Nos comprometemos a ofrecer productos de alta calidad.</p>
+                    <p>Si no estás satisfecho, te reembolsamos o reemplazamos el artículo.</p>
                 </div>
             </div>
 
@@ -65,8 +70,9 @@
                     <div class="icon">
                         <img src="assets/images/bag.svg" alt="Image" class="imf-fluid">
                     </div>
-                    <h3>Easy to Shop</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+                    <h3>Personalización Avanzada</h3>
+                    <p>Más allá de bordados, ofrecemos opciones de diseño completamente personalizado.</p>
+                    <p>Trabajamos estrechamente con los clientes para crear uniformes únicos.</p>
                 </div>
             </div>
 
@@ -75,27 +81,15 @@
                     <div class="icon">
                         <img src="assets/images/support.svg" alt="Image" class="imf-fluid">
                     </div>
-                    <h3>24/7 Support</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+                    <h3>Programa de Lealtad</h3>
+                    <p>Ofrecemos descuentos y beneficios a clientes frecuentes.</p>
+                    <p>Acumula puntos por cada compra.</p>
                 </div>
             </div>
-
-            <div class="col-6 col-md-6 col-lg-3 mb-4">
-                <div class="feature">
-                    <div class="icon">
-                        <img src="assets/images/return.svg" alt="Image" class="imf-fluid">
-                    </div>
-                    <h3>Hassle Free Returns</h3>
-                    <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-                </div>
-            </div>
-
         </div>
     
     </div>
 </div>
-<!-- End Why Choose Us Section -->
-
 <!-- Start Product Section -->
 <app-prod-destacado></app-prod-destacado>
 <!-- End Product Section -->
