--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,142 +1,112 @@
 <!-- Start Hero Section -->
 <div class="hero">
     <div class="container">
-        <app-destacado [title]="'About'"
-        [text]="'Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.'"
-        [image]="'assets/images/suitex/hombre-unidormes.png'"/>
+        <app-destacado [title]="'Sobre nosotros'" [text]="'Elaboración de uniformes empresariales'"
+            [image]="'assets/images/suitex/hombre-unidormes.png'" />
     </div>
 </div>
 <!-- End Hero Section -->
+<br />
+<br />
+<div class="container">
+    <div class="col-lg-6">
+        <h2 class="section-title">Sobre nosotros!</h2>
+        <p><b>*Origen y Especialización:</b> Fundada en 2024, Suitex se dedica al diseño y fabricación de uniformes de
+            identidad
+            corporativa. Contamos con personal altamente capacitado que cuenta con años de experiencia en el rubro, y
+            hemos
+            servido a los sectores empresarial, comercial y de
+            servicios, creando productos de la más alta calidad.</p>
+        <p>
+            <b>*Calidad y Confección:</b> Nos especializamos en la elaboración de prendas con excelentes materias primas
+            y una
+            confección
+            impecable. Cada puntada refleja nuestro compromiso con la satisfacción del cliente.
+        </p>
+        <p>
+            <b>*Valores:</b> En Suitex, portar un uniforme es más que vestir; es compartir los valores y la filosofía de
+            una
+            empresa. Nos
+            enorgullece ser parte de la imagen de nuestros clientes.
+        </p>
+        <p>
+            <b>*Respaldo y Garantías:</b> Contamos con las mejores telas y materiales para garantizar durabilidad y
+            detalles de
+            calidad.
+            Nuestros procesos están avalados por expertos y auditados por el Laboratorio Textil del Instituto
+            Politécnico
+            Nacional.
+        </p>
+        <p>
+            ¡Bienvenidos a la experiencia Suitex!
+        </p>
+    </div>
+</div>
+
 
 
 
 <!-- Start Why Choose Us Section -->
-<div class="why-choose-section">
-<div class="container">
-    <div class="row justify-content-between align-items-center">
-        <div class="col-lg-6">
-            <h2 class="section-title">Why Choose Us</h2>
-            <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-
-            <div class="row my-5">
-                <div class="col-6 col-md-6">
-                    <div class="feature">
-                        <div class="icon">
-                            <img src="assets/images/truck.svg" alt="Image" class="imf-fluid">
-                        </div>
-                        <h3>Fast &amp; Free Shipping</h3>
-                        <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-6">
-                    <div class="feature">
-                        <div class="icon">
-                            <img src="assets/images/bag.svg" alt="Image" class="imf-fluid">
-                        </div>
-                        <h3>Easy to Shop</h3>
-                        <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-6">
-                    <div class="feature">
-                        <div class="icon">
-                            <img src="assets/images/support.svg" alt="Image" class="imf-fluid">
-                        </div>
-                        <h3>24/7 Support</h3>
-                        <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-6">
-                    <div class="feature">
-                        <div class="icon">
-                            <img src="assets/images/return.svg" alt="Image" class="imf-fluid">
-                        </div>
-                        <h3>Hassle Free Returns</h3>
-                        <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="col-lg-5">
-            <div class="img-wrap">
-                <img src="assets/images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
-            </div>
-        </div>
-
-    </div>
-</div>
-</div>
+<app-pqelegirnos></app-pqelegirnos>
 <!-- End Why Choose Us Section -->
 
 <!-- Start Team Section -->
-<div class="untree_co-section">
-<div class="container">
+<!--div class="untree_co-section">
+    <div class="container">
 
-    <div class="row mb-5">
-        <div class="col-lg-5 mx-auto text-center">
-            <h2 class="section-title">Our Team</h2>
+        <div class="row mb-5">
+            <div class="col-lg-5 mx-auto text-center">
+                <h2 class="section-title">Our Team</h2>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
+                <img src="assets/images/person_1.jpg" class="img-fluid mb-5">
+                <h3 clas><a href="#"><span class="">Lawson</span> Arnold</a></h3>
+                <span class="d-block position mb-4">CEO, Founder, Atty.</span>
+                <p>Separated they live in.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                </p>
+                <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a>
+                </p>
+            </div>
+            
+            <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
+                <img src="assets/images/person_2.jpg" class="img-fluid mb-5">
+
+                <h3 clas><a href="#"><span class="">Jeremy</span> Walker</a></h3>
+                <span class="d-block position mb-4">CEO, Founder, Atty.</span>
+                <p>Separated they live in.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                </p>
+                <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a>
+                </p>
+
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
+                <img src="assets/images/person_3.jpg" class="img-fluid mb-5">
+                <h3 clas><a href="#"><span class="">Patrik</span> White</a></h3>
+                <span class="d-block position mb-4">CEO, Founder, Atty.</span>
+                <p>Separated they live in.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                </p>
+                <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a>
+                </p>
+            </div>
+            
+            <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
+                <img src="assets/images/person_4.jpg" class="img-fluid mb-5">
+
+                <h3 clas><a href="#"><span class="">Kathryn</span> Ryan</a></h3>
+                <span class="d-block position mb-4">CEO, Founder, Atty.</span>
+                <p>Separated they live in.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                </p>
+                <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a>
+                </p>
+            </div>
         </div>
     </div>
-
-    <div class="row">
-
-        <!-- Start Column 1 -->
-        <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-            <img src="assets/images/person_1.jpg" class="img-fluid mb-5">
-            <h3 clas><a href="#"><span class="">Lawson</span> Arnold</a></h3>
-<span class="d-block position mb-4">CEO, Founder, Atty.</span>
-<p>Separated they live in.
-Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
-        </div> 
-        <!-- End Column 1 -->
-
-        <!-- Start Column 2 -->
-        <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-            <img src="assets/images/person_2.jpg" class="img-fluid mb-5">
-
-            <h3 clas><a href="#"><span class="">Jeremy</span> Walker</a></h3>
-<span class="d-block position mb-4">CEO, Founder, Atty.</span>
-<p>Separated they live in.
-Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
-
-        </div> 
-        <!-- End Column 2 -->
-
-        <!-- Start Column 3 -->
-        <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-            <img src="assets/images/person_3.jpg" class="img-fluid mb-5">
-            <h3 clas><a href="#"><span class="">Patrik</span> White</a></h3>
-<span class="d-block position mb-4">CEO, Founder, Atty.</span>
-<p>Separated they live in.
-Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
-        </div> 
-        <!-- End Column 3 -->
-
-        <!-- Start Column 4 -->
-        <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-            <img src="assets/images/person_4.jpg" class="img-fluid mb-5">
-
-            <h3 clas><a href="#"><span class="">Kathryn</span> Ryan</a></h3>
-<span class="d-block position mb-4">CEO, Founder, Atty.</span>
-<p>Separated they live in.
-Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
-
-
-        </div> 
-        <!-- End Column 4 -->
-
-        
-
-    </div>
-</div>
-</div>
-<!-- End Team Section -->
+</div-->
