--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="container relative">
 
         <div class="sofa-img">
-            <img src="assets/images/suitex/uniformes.png" alt="Image" class="img-fluid">
+            <img src="assets/images/suitex/uniformados.png" alt="Image" class="img-fluid">
         </div>
 
         <div class="row">
@@ -11,14 +11,10 @@
                 <div class="subscription-form">
                     <h3 class="d-flex align-items-center"><span class="me-1"><img
                                 src="assets/images/envelope-outline.svg" alt="Image"
-                                class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
-
-                    <form action="#" class="row g-3">
+                                class="img-fluid"></span><span>Suscribirse</span></h3>
+                    <form action="#" class="row g-3" [formGroup]="validateForm" (ngSubmit)="submitForm()">
                         <div class="col-auto">
-                            <input type="text" class="form-control" placeholder="Enter your name">
-                        </div>
-                        <div class="col-auto">
-                            <input type="email" class="form-control" placeholder="Enter your email">
+                            <input type="email" class="form-control" placeholder="Ingrese su email" formControlName="correo">
                         </div>
                         <div class="col-auto">
                             <button class="btn btn-primary">
@@ -26,7 +22,6 @@
                             </button>
                         </div>
                     </form>
-
                 </div>
             </div>
         </div>
@@ -34,9 +29,7 @@
         <div class="row g-5 mb-5">
             <div class="col-lg-4">
                 <div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Suitex<span>.</span></a></div>
-                <p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
-                    malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
-                    Pellentesque habitant</p>
+                <p class="mb-4">Puntualidad: Entregamos a tiempo. : Honestidad: Trabajamos con transparencia. : Calidad: Nuestros uniformes destacan en diseño y durabilidad.</p>
 
                 <ul class="list-unstyled custom-social">
                     <li><a href="https://www.facebook.com/" target="_blank"><span
@@ -54,34 +47,24 @@
                 <div class="row links-wrap">
                     <div class="col-6 col-sm-6 col-md-3">
                         <ul class="list-unstyled">
-                            <li><a [routerLink]="'/about'" (click)="posicionInicial()">About us</a></li>
-                            <li><a [routerLink]="'/services'" (click)="posicionInicial()">Services</a></li>
-                            <li><a [routerLink]="'/contact'" (click)="posicionInicial()">Contact us</a></li>
+                            <li><a [routerLink]="'/about'" (click)="posicionInicial()">Sobre nosotros</a></li>
+                            <li><a [routerLink]="'/services'" (click)="posicionInicial()">Servicios</a></li>
+                            <li><a [routerLink]="'/contact'" (click)="posicionInicial()">Contactos</a></li>
                         </ul>
                     </div>
 
                     <div class="col-6 col-sm-6 col-md-3">
                         <ul class="list-unstyled">
-                            <li><a href="#">Support</a></li>
-                            <li><a href="#">Knowledge base</a></li>
-                            <li><a href="#">Live chat</a></li>
+                            <li><a [routerLink]="'/contact'" (click)="posicionInicial()">Soporte</a></li>
+                            <li><a [routerLink]="'/bases'" (click)="posicionInicial()">Base y condiciones</a></li>
                         </ul>
                     </div>
 
                     <div class="col-6 col-sm-6 col-md-3">
                         <ul class="list-unstyled">
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Our team</a></li>
-                            <li><a href="#">Leadership</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <ul class="list-unstyled">
-                            <li><a href="#">Nordic Chair</a></li>
-                            <li><a href="#">Kruzo Aero</a></li>
-                            <li><a href="#">Ergonomic Chair</a></li>
+                            <li><a href="#">Empleos</a></li>
+                            <li><a href="#">Nuestro equipo</a></li>
+                            <li><a [routerLink]="'/politica'" (click)="posicionInicial()">Política de privacidad</a></li>
                         </ul>
                     </div>
                 </div>
@@ -100,8 +83,8 @@
 
                 <div class="col-lg-6 text-center text-lg-end">
                     <ul class="list-unstyled d-inline-flex ms-auto">
-                        <li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li class="me-4"><a [routerLink]="'/bases'" (click)="posicionInicial()">Terms &amp; Conditions</a></li>
+                        <li><a [routerLink]="'/politica'" (click)="posicionInicial()">Privacy Policy</a></li>
                     </ul>
                 </div>
 
