--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,83 +1,18 @@
 <!-- Start Hero Section -->
 <div class="hero">
     <div class="container">
-        <app-destacado [title]="'Elaboración de uniformes empresariales.'"
-        [text]="'.'"
-        [image]="'assets/images/suitex/hombre-unidormes.png'" />
+        <app-destacado [title]="'Elaboración de uniformes empresariales'"
+            [text]="'Confeccionamos uniformes de alta calidad para tu equipo de trabajo. Desde trajes formales hasta cómodos uniformes escolares, nuestros diseños se adaptan a tus necesidades. Descubre la elegancia y funcionalidad de nuestros productos.'"
+            [image]="'assets/images/suitex/hombre-unidormes.png'" />
     </div>
 </div>
 <!-- End Hero Section -->
-
 <!-- Start Product Section -->
 <app-prod-destacado></app-prod-destacado>
 <!-- End Product Section -->
 
 <!-- Start Why Choose Us Section -->
-<div class="why-choose-section">
-    <div class="container">
-        <div class="row justify-content-between">
-            <div class="col-lg-6">
-                <h2 class="section-title">Why Choose Us</h2>
-                <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit
-                    imperdiet dolor tempor tristique.</p>
-
-                <div class="row my-5">
-                    <div class="col-6 col-md-6">
-                        <div class="feature">
-                            <div class="icon">
-                                <img src="assets/images/truck.svg" alt="Image" class="imf-fluid">
-                            </div>
-                            <h3>Fast &amp; Free Shipping</h3>
-                            <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-6 col-md-6">
-                        <div class="feature">
-                            <div class="icon">
-                                <img src="assets/images/bag.svg" alt="Image" class="imf-fluid">
-                            </div>
-                            <h3>Easy to Shop</h3>
-                            <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-6 col-md-6">
-                        <div class="feature">
-                            <div class="icon">
-                                <img src="assets/images/support.svg" alt="Image" class="imf-fluid">
-                            </div>
-                            <h3>24/7 Support</h3>
-                            <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-6 col-md-6">
-                        <div class="feature">
-                            <div class="icon">
-                                <img src="assets/images/return.svg" alt="Image" class="imf-fluid">
-                            </div>
-                            <h3>Hassle Free Returns</h3>
-                            <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-                            </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="col-lg-5">
-                <div class="img-wrap">
-                    <img src="assets/images/suitex/hombre-mujer.jpg" alt="Image" class="img-fluid" >
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
+<app-pqelegirnos></app-pqelegirnos>
 <!-- End Why Choose Us Section -->
 
 <!-- Start We Help Section -->
@@ -88,20 +23,23 @@
                 <div class="imgs-grid">
                     <div class="grid grid-1"><img src="assets/images/suitex/chica-uniforme.jpg" alt="Untree.co"></div>
                     <div class="grid grid-2"><img src="assets/images/suitex/chica-uniforme2.jpg" alt="Untree.co"></div>
-                    <div class="grid grid-3"><img src="assets/images/suitex/hombre-uniformado.jpg" alt="Untree.co"></div>
+                    <div class="grid grid-3"><img src="assets/images/suitex/hombre-uniformado.jpg" alt="Untree.co">
+                    </div>
                 </div>
             </div>
             <div class="col-lg-5 ps-lg-5">
-                <h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-                <p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam
-                    ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant
-                    morbi tristique senectus et netus et malesuada</p>
+                <h2 class="section-title mb-4">Te ayudamos a escoger tu estilo.</h2>
+                <p>Brindamos asesoramiento para diseñar el estilo que mas sea acorde a tu negocio.</p>
+                <p>Aquí algunos de nuestros principios.</p>
 
                 <ul class="list-unstyled custom-list my-4">
-                    <li>Donec vitae odio quis nisl dapibus malesuada</li>
-                    <li>Donec vitae odio quis nisl dapibus malesuada</li>
-                    <li>Donec vitae odio quis nisl dapibus malesuada</li>
-                    <li>Donec vitae odio quis nisl dapibus malesuada</li>
+                    <li>Comunicación fuerte.</li>
+                    <li>Calidad y durabilidad.</li>
+                    <li>Autoconciencia.</li>
+                    <li>Integridad</li>
+                    <li>Confianza</li>
+                    <li>Dedicación</li>
+                    <li>Relaciones comerciales a largo plazo.</li>
                 </ul>
                 <p><a herf="#" class="btn">Explore</a></p>
             </div>
@@ -110,111 +48,8 @@
 </div>
 <!-- End We Help Section -->
 
-<!-- Start Popular Product -->
-<div class="popular-product">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
-                <div class="product-item-sm d-flex">
-                    <div class="thumbnail">
-                        <img src="assets/images/suitex/indutex-150.webp" alt="Image" class="img-fluid" width="90">
-                    </div>
-                    <div class="pt-3">
-                        <h3>Nordic Chair</h3>
-                        <p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-                        <p><a href="#">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
-                <div class="product-item-sm d-flex">
-                    <div class="thumbnail">
-                        <img src="assets/images/suitex/polo01.png" alt="Image" class="img-fluid" width="120">
-                    </div>
-                    <div class="pt-3">
-                        <h3>Kruzo Aero Chair</h3>
-                        <p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-                        <p><a href="#">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
-                <div class="product-item-sm d-flex">
-                    <div class="thumbnail">
-                        <img src="assets/images/suitex/uniformes-corp-blusa-blanca-clasica.png" alt="Image" class="img-fluid" width="100">
-                    </div>
-                    <div class="pt-3">
-                        <h3>Ergonomic Chair</h3>
-                        <p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-                        <p><a href="#">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
-<!-- End Popular Product -->
-
-<app-testimonials></app-testimonials>
+<!--app-testimonials></app-testimonials-->
 
 <!-- Start Blog Section -->
-<div class="blog-section">
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-md-6">
-                <h2 class="section-title">Recent Blog</h2>
-            </div>
-            <div class="col-md-6 text-start text-md-end">
-                <a href="#" class="more">View All Posts</a>
-            </div>
-        </div>
-
-        <div class="row">
-
-            <div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-                <div class="post-entry">
-                    <a href="#" class="post-thumbnail"><img src="assets/images/suitex/05ac1365bef63e410ae5b480887201b4.jpg" alt="Image"
-                            class="img-fluid" width="250"></a>
-                    <div class="post-content-entry">
-                        <h3><a href="#">First Time Home Owner Ideas</a></h3>
-                        <div class="meta">
-                            <span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-                <div class="post-entry">
-                    <a href="#" class="post-thumbnail"><img src="assets/images/suitex/uniformes-con-bordado.jpg" alt="Image"
-                            class="img-fluid"></a>
-                    <div class="post-content-entry">
-                        <h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-                        <div class="meta">
-                            <span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-                <div class="post-entry">
-                    <a href="#" class="post-thumbnail"><img src="assets/images/suitex/201901.jpg" alt="Image"
-                            class="img-fluid" width="250"></a>
-                    <div class="post-content-entry">
-                        <h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-                        <div class="meta">
-                            <span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
+<!--app-blogs></app-blogs-->
 <!-- End Blog Section -->
