--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,11 +11,11 @@
 
         <div class="collapse navbar-collapse" id="navbarsFurni">
             <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-                <li [ngClass]="{'nav-link active': currentRoute === '/home', '': currentRoute !== '/home'}"><a class="nav-link" [routerLink]="'/home'" >Home</a></li>
-                <li [ngClass]="{'nav-link active': currentRoute === '/shop', '': currentRoute !== '/shop'}"><a class="nav-link" [routerLink]="'/shop'" >Shop</a></li>
-                <li [ngClass]="{'nav-link active': currentRoute === '/about', '': currentRoute !== '/about'}"><a class="nav-link" [routerLink]="'/about'" >About us</a></li>
-                <li [ngClass]="{'nav-link active': currentRoute === '/services', '': currentRoute !== '/services'}"><a class="nav-link" [routerLink]="'/services'" >Services</a></li>
-                <li [ngClass]="{'nav-link active': currentRoute === '/contact', '': currentRoute !== '/contact'}"><a class="nav-link" [routerLink]="'/contact'" >Contact us</a></li>
+                <li [ngClass]="{'nav-link active': currentRoute === '/home', '': currentRoute !== '/home'}"><a class="nav-link" [routerLink]="'/home'" >Inicio</a></li>
+                <li [ngClass]="{'nav-link active': currentRoute === '/shop', '': currentRoute !== '/shop'}"><a class="nav-link" [routerLink]="'/shop'" >Tienda</a></li>
+                <li [ngClass]="{'nav-link active': currentRoute === '/about', '': currentRoute !== '/about'}"><a class="nav-link" [routerLink]="'/about'" >Sobre nosotros</a></li>
+                <li [ngClass]="{'nav-link active': currentRoute === '/services', '': currentRoute !== '/services'}"><a class="nav-link" [routerLink]="'/services'" >Servicios</a></li>
+                <li [ngClass]="{'nav-link active': currentRoute === '/contact', '': currentRoute !== '/contact'}"><a class="nav-link" [routerLink]="'/contact'" >Contactenos</a></li>
             </ul>
             
         </div>
