--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,21 +1,19 @@
 <div class="hero">
     <div class="container">
-        <app-destacado [title]="'Shop'"
-        [text]="'Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.'"
+        <app-destacado [title]="'Tienda'"
+        [text]="'Toda la información disponible puede ser meramente referencial, por lo que se requerira de su ayuda para definir el tipo de telas y medidas para los uniformes de sus empleados.'"
         />
     </div>
 </div>
 <div class="untree_co-section product-section before-footer-section">
     <div class="container">
           <div class="row">
-
               <!-- Start Column 1 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
-                    <img src="assets/images/suitex/988def_4f7024f126e54f5fb296d0148547a2c2~mv2.webp" class="img-fluid product-thumbnail" width="300">
-                    <h3 class="product-title">Nordic Chair</h3>
-                    <strong class="product-price">$50.00</strong>
-
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
+                    <img src="assets/images/suitex/988def_4f7024f126e54f5fb296d0148547a2c2~mv2.webp" class="img-fluid product-thumbnail" width="320">
+                    <h3 class="product-title">Pantalon clasico para caballero</h3>
+                    <strong class="product-price">Gs 100.000</strong>
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
                     </span>
@@ -25,10 +23,10 @@
                 
             <!-- Start Column 2 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/CAMISA-BIG.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Nordic Chair</h3>
-                    <strong class="product-price">$50.00</strong>
+                    <h3 class="product-title">Camisa Dama</h3>
+                    <strong class="product-price">gs 110.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -39,10 +37,10 @@
 
             <!-- Start Column 3 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/camisa-roja.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Kruzo Aero Chair</h3>
-                    <strong class="product-price">$78.00</strong>
+                    <h3 class="product-title">Camisa Caballero</h3>
+                    <strong class="product-price">Gs 130.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -53,10 +51,10 @@
 
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/camisa1.webp" class="img-fluid product-thumbnail" width="300">
-                    <h3 class="product-title">Ergonomic Chair</h3>
-                    <strong class="product-price">$43.00</strong>
+                    <h3 class="product-title">Camisa clasica para Caballero</h3>
+                    <strong class="product-price">$100.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -68,10 +66,10 @@
 
             <!-- Start Column 1 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/chaqueta-remera.webp" class="img-fluid product-thumbnail" >
-                    <h3 class="product-title">Nordic Chair</h3>
-                    <strong class="product-price">$50.00</strong>
+                    <h3 class="product-title">Conjunto chaqueta remera</h3>
+                    <strong class="product-price">Gs 250.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -82,10 +80,10 @@
                 
             <!-- Start Column 2 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/Diseno-sin-titulo-14-2-1024x486.png" class="img-fluid product-thumbnail">
-                    <h3 class="product-title">Nordic Chair</h3>
-                    <strong class="product-price">$50.00</strong>
+                    <h3 class="product-title">Conjunto 3 en 1</h3>
+                    <strong class="product-price">Gs 190.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -96,24 +94,22 @@
 
             <!-- Start Column 3 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/hombre-unidormes.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Kruzo Aero Chair</h3>
-                    <strong class="product-price">$78.00</strong>
-
+                    <h3 class="product-title">Camisa manga corta</h3>
+                    <strong class="product-price">Gs 120.000</strong>
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
                     </span>
                 </a>
             </div>
             <!-- End Column 3 -->
-
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/indutex-150.webp" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Ergonomic Chair</h3>
-                    <strong class="product-price">$43.00</strong>
+                    <h3 class="product-title">Camisa reflectiva</h3>
+                    <strong class="product-price">Gs 140.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -123,10 +119,10 @@
             <!-- End Column 4 -->
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/mameluco-ropa-de-trabajo-fabinco-laboral.webp" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Ergonomic Chair</h3>
-                    <strong class="product-price">$43.00</strong>
+                    <h3 class="product-title">Mameluco</h3>
+                    <strong class="product-price">Gs 150.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -137,10 +133,10 @@
 
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/uniformes-corp-blusa-blanca-clasica.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Ergonomic Chair</h3>
-                    <strong class="product-price">$43.00</strong>
+                    <h3 class="product-title">Camisa clasica de Dama</h3>
+                    <strong class="product-price">Gs 110.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -151,11 +147,10 @@
 
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/uniformes-corp-camisa-blancorayas.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Ergonomic Chair</h3>
-                    <strong class="product-price">$43.00</strong>
-
+                    <h3 class="product-title">Camisa clasica masculina</h3>
+                    <strong class="product-price">Gs 100.000</strong>
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
                     </span>
@@ -164,10 +159,10 @@
             <!-- End Column 4 -->
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="#">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/uniformes-reflectivos-santo-domingo.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Ergonomic Chair</h3>
-                    <strong class="product-price">$43.00</strong>
+                    <h3 class="product-title">Uniformes pesados</h3>
+                    <strong class="product-price">Gs 350.000</strong>
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
