--- a/src/app/components/testimonials/testimonials.component.html
+++ b/src/app/components/testimonials/testimonials.component.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7 mx-auto text-center">
-                <h2 class="section-title">Testimonials</h2>
+                <h2 class="section-title">Testimonios</h2>
             </div>
         </div>
     </div>
