--- a/src/app/components/prod-destacado/prod-destacado.component.html
+++ b/src/app/components/prod-destacado/prod-destacado.component.html
@@ -10,15 +10,38 @@
                     para tu equipo!.</p>
                 <p><a [routerLink]="'/shop'" class="btn" (click)="posicionInicial()">Explorar</a></p>
             </div>
-            <!-- End Column 1 -->
+            <!-- Start Column 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
+                    <img src="assets/images/suitex/CAMISA-BIG.png" class="img-fluid product-thumbnail" width="200">
+                    <h3 class="product-title">Camisa clásica corte Femenino</h3>
+                    <!--strong class="product-price">Gs 100.000</strong-->
+                    -Oxford Oriente
+                    <br />
+                    <!--strong class="product-price">Gs 80.000</strong-->
+                    -Oxford Premium
+                    <br />
+                    <!--strong class="product-price">Gs 80.000</strong-->
+                    -T.C Premium
+                    <span class="icon-cross">
+                        <img src="assets/images/cross.svg" class="img-fluid">
+                    </span>
+                </a>
+            </div>
+            <!-- End Column 3 -->
             <!-- Start Column 2 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
                 <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/camisa1.webp" class="img-fluid product-thumbnail" width="400">
                     <h3 class="product-title">Camisa clásica Masculina</h3>
-                    <strong class="product-price">Gs 100.000</strong> Minoristas
+                    <!--strong class="product-price">Gs 100.000</strong-->
+                    -Oxford Oriente
                     <br />
-                    <strong class="product-price">Gs 80.000</strong> Mayoristas
+                    <!--strong class="product-price">Gs 80.000</strong-->
+                    -Oxford Premium
+                    <br />
+                    <!--strong class="product-price">Gs 80.000</strong-->
+                    -T.C Premium
 
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
@@ -27,30 +50,19 @@
             </div>
             <!-- End Column 2 -->
 
-            <!-- Start Column 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/CAMISA-BIG.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Camisa clásica corte Femenino</h3>
-                    <strong class="product-price">Gs 110.000</strong> Minoristas
-                    <br />
-                    <strong class="product-price">Gs 90.000</strong> Mayoristas
 
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <!-- End Column 3 -->
 
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
                 <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/camisa-roja.png" class="img-fluid product-thumbnail" width="200">
+                    <img src="assets/images/suitex/remerapolo2.jpg" class="img-fluid product-thumbnail" width="260">
                     <h3 class="product-title">Camisa moderna Masculina</h3>
-                    <strong class="product-price">Gs 130.000</strong> Minoristas
+                    <!--strong class="product-price">Gs 100.000</strong-->
+                    -Pique Vicuña
                     <br />
-                    <strong class="product-price">Gs 95.000</strong> Mayoristas
+                    <!--strong class="product-price">Gs 80.000</strong-->
+                    -Pique Peruano
+                    
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
                     </span>
