--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -6,295 +6,17 @@
 </div>
 <div class="untree_co-section product-section before-footer-section">
     <div class="container">
+        <div class="row" style="margin: 30px;">
+            <input  type="text" id="myInput" [(ngModel)]="searchText" (keyup)="filteredItems()" placeholder="Filtrar...">
+        </div>
         <div class="row">
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/uniformes-corp-blusa-blanca-clasica.png"
-                        class="img-fluid product-thumbnail" width="230">
-                    <h3 class="product-title">Camisa Dama</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Oxford Oriente
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -Oxford Premium
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -T.C Premium
-
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-
-
-
-            <!-- End Column 1 -->
-
-            <!-- Start Column 2 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/CAMISA-BIG.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Camisa Dama</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Oxford Oriente
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -Oxford Premium
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -T.C Premium
-
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <!-- End Column 2 -->
-
-            <!-- Start Column 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/camisa-roja.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Camisa Caballero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Oxford Oriente
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -Oxford Premium
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -T.C Premium
-
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/camisa1.webp" class="img-fluid product-thumbnail" width="300">
-                    <h3 class="product-title">Camisa Caballero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Oxford Oriente
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -Oxford Premium
-                    <br />
-                    <!--strong class="product-price">Gs 80.000</strong-->
-                    -T.C Premium
-
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantaloncaballero1.webp" class="img-fluid product-thumbnail"
-                        width="300">
-                    <h3 class="product-title">Pantalon de vestir caballero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -CN
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantaloncaballero2.webp" class="img-fluid product-thumbnail"
-                        width="300">
-                    <h3 class="product-title">Pantalon de vestir caballero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -CN
-
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantalonmujer1.png" class="img-fluid product-thumbnail" width="170">
-                    <h3 class="product-title">Pantalon de vestir dama</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -CN
-
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantalonmujer2.png" class="img-fluid product-thumbnail" width="170">
-                    <h3 class="product-title">Pantalon de vestir dama</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -CN
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-
-
-
-
-
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/remerapolo2.jpg" class="img-fluid product-thumbnail" width="250">
-                    <h3 class="product-title">Remera tipo polo</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Pique Brasilero
-                    <br />
-                    -Pique Peruano
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/remera2.png" class="img-fluid product-thumbnail" width="250">
-                    <h3 class="product-title">Remera tipo polo</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Pique Brasilero
-                    <br />
-                    -Pique Peruano
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/remera3.png" class="img-fluid product-thumbnail" width="200">
-                    <h3 class="product-title">Remera tipo polo</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Pique Brasilero
-                    <br />
-                    -Pique Peruano
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/remeradama1.png" class="img-fluid product-thumbnail" width="250">
-                    <h3 class="product-title">Remera tipo polo</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Pique Brasilero
-                    <br />
-                    -Pique Peruano
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantaloncarp1.png" class="img-fluid product-thumbnail" width="300">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Sarga media
-                    <br />
-                    -Sarga pesada
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantaloncarp2.png" class="img-fluid product-thumbnail" width="300">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Sarga media
-                    <br />
-                    -Sarga pesada
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantaloncarp3.png" class="img-fluid product-thumbnail" width="150">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Sarga media
-                    <br />
-                    -Sarga pesada
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/pantaloncarp4.png" class="img-fluid product-thumbnail" width="250">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Sarga media
-                    <br />
-                    -Sarga pesada
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-
-
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/campind4.png" class="img-fluid product-thumbnail" width="250">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Nailon Impermeable
-                    <br />
-                    -Nailon Impermeable fino sin ruido
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/campind1.png" class="img-fluid product-thumbnail" width="400">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Nailon Impermeable
-                    <br />
-                    -Nailon Impermeable fino sin ruido
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/campind2.png" class="img-fluid product-thumbnail" width="300">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Nailon Impermeable
-                    <br />
-                    -Nailon Impermeable fino sin ruido
-                    <span class="icon-cross">
-                        <img src="assets/images/cross.svg" class="img-fluid">
-                    </span>
-                </a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-5">
-                <a class="product-item" href="https://wa.me/595993645127" target="_blank">
-                    <img src="assets/images/suitex/campind3.png" class="img-fluid product-thumbnail" width="250">
-                    <h3 class="product-title">Pantalon carpintero</h3>
-                    <!--strong class="product-price">Gs 100.000</strong-->
-                    -Nailon Impermeable
-                    <br />
-                    -Nailon Impermeable fino sin ruido
+            <div class="col-12 col-md-4 col-lg-3 mb-5" *ngFor="let data of datosBuscados">
+                <a class="product-item" href="{{data.href}}" target="_blank">
+                    <img src="{{data.image}}" class="img-fluid product-thumbnail" width="{{data.size}}">
+                    <h3 class="product-title">{{data.name}}</h3>
+                    <div *ngFor="let det of data.detail">
+                        {{det}}
+                    </div>
                     <span class="icon-cross">
                         <img src="assets/images/cross.svg" class="img-fluid">
                     </span>
